# biblenlp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  dev-requirements.txt  main.py  models.py  process_stringed_structure.py  pyproject.toml  requirements.txt  setup.cfg  styleguide.toml  test.py  untangle_xml.py  utilities.py
biblenlp/interface/: abstract.py  models.py  types.py
biblenlp/parsing/: __init__.py  cached.py  file_io.py  process_stringed_structure.py  untangle_xml.py
biblenlp/restructuring/: __init__.py  filter_functions.py  process_stringed_structure.py  untangle_xml.py
biblenlp/utility/: decorators.py
biblenlp/vectorization/: counters.py  mappings.py  unique.py
restructuring/: models.py  process_stringed_structure.py  untangle_xml.py
