[tool.poetry]
name = "biblenlp"
version = "0.1.0"
description = ""
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
hypothesis = {extras = ["black", "cli"], version = "^6.62.0"}
flake8 = "^6.0.0"
devtools = "^0.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
